traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:24: error: type mismatch;
 found   : Int
 required: Boolean
            return(c)
                   ^